--- a/relinksys/api/views/invoice_Box.ejs
+++ b/relinksys/api/views/invoice_Box.ejs
@@ -70,7 +70,10 @@
     padding: 5px !important;
     font-weight: 900 !important;
 }
-
+.billTotalRow{
+    height: 15%;
+    border: 1px solid #000;
+}
 .billTotalRow .col2 .ul1 li, .billTotalRow .col2 .ul2 li{
     border: solid 1px;
     border-collapse: collapse; 
@@ -80,7 +83,7 @@
 .billTotalRow .col2 .ul1 li{
     border-right:  none !important;
 }
-.billofsupply {
+.billofsupply { 
   border-collapse: collapse;
   padding: 0;
   margin: 0;
@@ -258,15 +261,15 @@
                           <th>ADD</th>
                        </tr>
                        <tr>
-                         <td class="top_btm"> <%=i.REDPSPH%> </td> 
-                         <td class="top_btm"> <%=i.REDPCYL%> </td> 
+                         <td class="top_btm">  <%= (parseFloat(i.REDPSPH) == 0.00 ? 'PLANO' : i.REDPSPH) %></td> 
+                         <td class="top_btm">  <%= (parseFloat(i.REDPCYL) == 0.00 ? 'PLANO' : i.REDPCYL) %></td> 
                          <td class="top_btm"> <%=i.REDPAxis%> </td> 
                          <td class="top_btm"> <%=i.REDPVA%> </td> 
                          <td class="top_btm"> <%=i.R_Addition%> </td> 
                        </tr>
                        <tr>
-                          <td> <%=i.RENPSPH%> </td> 
-                          <td> <%=i.RENPCYL%> </td> 
+                          <td> <%= (parseFloat(i.RENPSPH) == 0.00 ? 'PLANO' : i.RENPSPH) %></td> 
+                          <td>  <%= (parseFloat(i.RENPCYL) == 0.00 ? 'PLANO' : i.RENPCYL) %></td> 
                           <td> <%=i.RENPAxis%> </td> 
                           <td> <%=i.RENPVA%> </td> 
                           <!-- <td> <%=i.R_Addition%> </td>  -->
@@ -287,15 +290,15 @@
                       <th>ADD</th>
                     </tr>
                     <tr>
-                      <td class="top_btm"> <%=i.LEDPSPH%> </td> 
-                      <td class="top_btm"> <%=i.LEDPCYL%> </td> 
+                      <td class="top_btm">  <%= (parseFloat(i.LEDPSPH) == 0.00 ? 'PLANO' : i.LEDPSPH) %></td> 
+                      <td class="top_btm">  <%= (parseFloat(i.LEDPCYL) == 0.00 ? 'PLANO' : i.LEDPCYL) %></td> 
                       <td class="top_btm"> <%=i.LEDPAxis%> </td> 
                       <td class="top_btm"> <%=i.LEDPVA%> </td> 
                       <td class="top_btm"> <%=i.L_Addition%> </td> 
                     </tr>
                     <tr>
-                      <td > <%=i.LENPSPH%> </td> 
-                      <td > <%=i.LENPCYL%> </td> 
+                      <td > <%= (parseFloat(i.LENPSPH) == 0.00 ? 'PLANO' : i.LENPSPH) %></td> 
+                      <td > <%= (parseFloat(i.LENPCYL) == 0.00 ? 'PLANO' : i.LENPCYL) %></td> 
                       <td > <%=i.LENPAxis%> </td> 
                       <td > <%=i.LENPVA%> </td> 
                       <!-- <td> <%=i.L_Addition%> </td>  -->
@@ -332,7 +335,7 @@
                    </table>
                      <%})}%>
                       </section>  
-                <%}%>         
+                 <%}%>        
             <%}%>
             <!-- customer power end -->
             <!-- Product list start  -->
@@ -770,8 +773,8 @@
             <!-- Product list  end  -->
 
             <!-- improtant note billtotal start -->
-            <section >
-                <div class="billTotalRow" style="border: 1px solid #000; border-top: 0px solid !important; padding: 0px 5px; margin: 0; padding-top: .5%; position: relative; ">
+            <section style=" height: auto;">
+                <div class="billTotalRow" style=" border-top: 0px solid !important; padding: 0px 5px; margin: 0; padding-top: .5%; position: relative; ">
                     <% if (data.Signature != 'http://localhost:3000/null' && data.Signature != 'http://localhost:3000/undefined'){%>
                         <img src="<%= data.Signature %>" alt="Signature" style="width: 100px;position:absolute; left: 55%;top: 10%;">
                         <%}%>
@@ -888,9 +891,7 @@
 </body>
 
 
-<% if (data.shopdetails.CompanyID == 400 ){%>
-       <%- include('./NETRASEVA.ejs', {pageNumber: 1}) %>            
- <%}%>
+
 
 
 
