--- a/relinksys/web/src/app/admin/company-setting/company-setting.component.html
+++ b/relinksys/web/src/app/admin/company-setting/company-setting.component.html
@@ -315,6 +315,7 @@
                                                                 required>
                                                                 <mat-option value="invoice.ejs">invoice.ejs</mat-option>
                                                                 <mat-option value="invoice_Box.ejs">invoice_Box</mat-option>
+                                                                <mat-option value="ajanta.ejs">A5 invoice</mat-option>
                                                                 <mat-option value="Arabic.ejs">Arabic.ejs</mat-option>
                                                                 <mat-option value="invoiceSapphire.ejs">invoiceSapphire.ejs</mat-option>
                                                                 <mat-option value="Santosh_Optical.ejs">Santosh_Optical.ejs</mat-option>
@@ -606,25 +607,21 @@
                                                 <div class="row">
                                                     <div class="col-12 p-0">
                                                         <!-- center log -->
-                                                        <span *ngIf="this.bill.BillHeader == '0'">
+                                                        <span *ngIf="this.bill.BillHeader == '0'"  style="width:100%;text-align:{{this.bill.ImageAlign}}">
                                                             <header
-                                                                style="width:{{this.bill.HeaderWidth}}; height: {{this.bill.HeaderHeight}}; padding: {{this.bill.HeaderPadding}}; margin: {{this.bill.HeaderMargin}};  border: 1px solid #000 ;ltext-align: center;">
-                                                                <div
-                                                                    style="width:100% ; text-align: center;margin-bottom: 15px">
-                                                                    <img src="../../../assets/images/OGorange.png"
-                                                                        alt=""
-                                                                        style="width:{{this.bill.ImageWidth}}; height: {{this.bill.ImageHeight}};">
-
-                                                                </div>
-
+                                                                style="width:{{this.bill.HeaderWidth}}px; height: {{this.bill.HeaderHeight}}px; padding: {{this.bill.HeaderPadding}}px; margin: {{this.bill.HeaderMargin}}px;  border: 1px solid #000 ;ltext-align: center;">
+                                                                <span style=" height: 90px; text-align:{{this.bill.ImageAlign}};margin-bottom: 15px">
+                                                                    <img src="{{this.env.apiUrl + this.shop.LogoURL}}"
+                                                                        alt="" style="width:{{this.bill.ImageWidth}}px; height: {{this.bill.ImageHeight}}px;">
+                                                                </span>
                                                                 <p
-                                                                    style=" font-weight: 400;text-align: center; font-size: {{this.bill.ShopDetailFont}}; ">
+                                                                    style=" font-weight: 400;text-align: center; font-size: {{this.bill.ShopDetailFont}}px; ">
                                                                     TH SCHONEAR SAMAROL, OPP-RAOSAHEB PATWARDHAN
                                                                     SMARAK, BHISBAUG ROAD, PROFESSOR CHOWK, SAVEDI,
                                                                     A.NAGAR-414003 </p>
 
                                                                 <div
-                                                                    style="padding-top: 0%;   width: 100%; font-size: {{this.bill.ShopDetailFont}}; ">
+                                                                    style="padding-top: 0%;   width: 100%; font-size: {{this.bill.ShopDetailFont}}px; ">
 
                                                                     <div
                                                                         style="font-weight: 400;width: 33%;  float: left;text-align: left;">
