--- a/relinksys/web/src/app/sale/bill-list/bill-list.component.html
+++ b/relinksys/web/src/app/sale/bill-list/bill-list.component.html
@@ -402,10 +402,10 @@
                                 </td>
                                 <td *ngIf="!data.UpdateMode" class="text-center">{{data.PaymentMode}} </td>
                                 <td
-                                  *ngIf="(data.UpdateMode && data.PaymentMode === 'Customer Credit' )|| (data.UpdateMode && data.PaymentMode === 'Payment Initiated') || (data.UpdateMode && data.PaymentMode === 'Old Software Payment') || (data.UpdateMode && data.PaymentMode === 'Customer Return') || (data.UpdateMode && data.PaymentMode === 'Customer Reward') || (data.UpdateMode && data.PaymentMode === 'AMOUNT RETURN') "
+                                  *ngIf="(data.UpdateMode && data.PaymentMode === 'Customer Credit' )|| (data.UpdateMode && data.PaymentMode === 'Payment Initiated') || (data.UpdateMode && data.PaymentMode === 'Old Software Payment') || (data.UpdateMode && data.PaymentMode === 'Customer Return') || (data.UpdateMode && data.PaymentMode === 'Customer Reward') || (data.UpdateMode && data.PaymentMode === 'AMOUNT RETURN' || data.PaymentMode === 'AMOUNT RETURN CASH' || data.PaymentMode === 'AMOUNT RETURN UPI') "
                                   class="text-center">{{data.PaymentMode}}</td>
                                 <td
-                                  *ngIf="(data.UpdateMode && data.PaymentMode !== 'Customer Credit' && data.PaymentMode !== 'Payment Initiated' && data.PaymentMode !== 'Old Software Payment' && data.PaymentMode !== 'Customer Return' && data.PaymentMode !== 'AMOUNT RETURN' && data.PaymentMode !== 'Customer Reward') "
+                                  *ngIf="(data.UpdateMode && data.PaymentMode !== 'Customer Credit' && data.PaymentMode !== 'Payment Initiated' && data.PaymentMode !== 'Old Software Payment' && data.PaymentMode !== 'Customer Return' && data.PaymentMode !== 'AMOUNT RETURN' || data.PaymentMode === 'AMOUNT RETURN CASH' || data.PaymentMode === 'AMOUNT RETURN UPI' && data.PaymentMode !== 'Customer Reward') "
                                   style=" text-align: center;">
                                   <select style="height: 26px;" name="PaymentMode" [(ngModel)]="data.PaymentMode"
                                     #name="ngModel" [ngModelOptions]="{standalone: true}" name="data.PaymentMode{{i}}"
@@ -517,6 +517,8 @@
                           <mat-select name="Payment Modec" [(ngModel)]="applyCreditPayment.PaymentMode" required
                             #GSTTypecontrol1>
                             <mat-option value="AMOUNT RETURN"> AMOUNT RETURN</mat-option>
+                            <mat-option value="AMOUNT RETURN CASH"> AMOUNT RETURN CASH</mat-option>
+                            <mat-option value="AMOUNT RETURN UPI"> AMOUNT RETURN UPI</mat-option>
                           </mat-select>
                         </mat-form-field>
                       </div>
